--- a/5-ProjetoCSSIntermediario/posicionamentos/index.html
+++ b/5-ProjetoCSSIntermediario/posicionamentos/index.html
@@ -12,6 +12,7 @@
             background: #FFF;
             width: 800px;
             margin: 10px auto;
+            position: relative;
         }
         h1{
             position: static;
@@ -21,9 +22,13 @@
         }
         .relative{
             border: 1px solid red;
-            position: relative;
-            left: 300px;
-            top: 100px;
+        }
+        .absolute{
+            position: absolute;
+            border: 1px solid violet;
+            top: 0px;
+            background: #fff;
+            left: 700px;
         }
     </style>
 </head>
@@ -31,7 +36,7 @@
     <div id="container">
         <h1>Posicionamentos</h1>
         <p> P1: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam velit odio, laoreet vitae neque facilisis, tincidunt dignissim tortor. Maecenas nec lorem at arcu volutpat finibus. Vestibulum dictum lorem lectus, aliquam laoreet neque cursus vitae.</p>
-        <p class="relative">  P2: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam velit odio, laoreet vitae neque facilisis, tincidunt dignissim tortor. Maecenas nec lorem at arcu volutpat finibus. Vestibulum dictum lorem lectus, aliquam laoreet neque cursus vitae.</p>
+        <p class="absolute">  P2: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam velit odio, laoreet vitae neque facilisis, tincidunt dignissim tortor. Maecenas nec lorem at arcu volutpat finibus. Vestibulum dictum lorem lectus, aliquam laoreet neque cursus vitae.</p>
         <p> P3: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam velit odio, laoreet vitae neque facilisis, tincidunt dignissim tortor. Maecenas nec lorem at arcu volutpat finibus. Vestibulum dictum lorem lectus, aliquam laoreet neque cursus vitae.</p>
     </div>
 </body>
