--- a/14-Bootstrap&DesignResponsivo/4-elementosFlutuantes/index.html
+++ b/14-Bootstrap&DesignResponsivo/4-elementosFlutuantes/index.html
@@ -22,7 +22,7 @@
     <div class="float-md-end">Float end on viewports sized MD (medium) or wider</div><br>
     <div class="float-lg-end">Float end on viewports sized LG (large) or wider</div><br>
     <div class="float-xl-end">Float end on viewports sized XL (extra-large) or wider</div><br>
-    <div style="margin-top: 50px;" class="sticky-top">Cola ai otario</div>
+    <div style="margin-top: 50px;" class="sticky-top">Cola ai mane</div>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
